# Snap-Procure

./: README.md  app.py  pyproject.toml  report.md  requirements.txt
crew_ai/snap_procure/: README.md
crew_ai/snap_procure/src/snap_procure/: crew.py  main.py
crew_ai/snap_procure/src/snap_procure/config/: agents.yaml  tasks.yaml
crew_ai/snap_procure/src/snap_procure/tools/: scraper.py
src/snap_procure/: crew.py  main.py
src/snap_procure/config/: agents.yaml  tasks.yaml
src/snap_procure/tools/: scraper.py
