[project]
name = "snap_procure"
version = "0.1.0"
description = "snap-procure using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
snap_procure = "snap_procure.main:run"
run_crew = "snap_procure.main:run"
train = "snap_procure.main:train"
replay = "snap_procure.main:replay"
test = "snap_procure.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
